welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:16: error: ';' expected but '(' found.
    case "V" => recule():recule();recule();recule();recule()
                               ^BDR2:20: error: ';' expected but 'if' found.
}if !estSurMessage()
 ^BDR2:25: error: Unmatched closing brace '}' ignored here
	}
        ^